# IO-TCP

./: README.md
doc/: NAT_setting.txt  NVMe_target_offloading.txt
host_stack/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  setup_mtcp_dpdk_env.sh
host_stack/apps/example/: epserver.c
host_stack/apps/lighttpd-1.4.32/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libtool
host_stack/apps/lighttpd-1.4.32/autom4te.cache/: traces.1
host_stack/apps/lighttpd-1.4.32/doc/: Makefile  Makefile.in
host_stack/apps/lighttpd-1.4.32/doc/config/: Makefile  Makefile.in  m-lighttpd.conf
host_stack/apps/lighttpd-1.4.32/doc/config/conf.d/: Makefile  Makefile.in  debug.conf
host_stack/apps/lighttpd-1.4.32/doc/config/vhosts.d/: Makefile  Makefile.in
host_stack/apps/lighttpd-1.4.32/doc/initscripts/: Makefile  Makefile.in
host_stack/apps/lighttpd-1.4.32/doc/outdated/: Makefile  Makefile.in
host_stack/apps/lighttpd-1.4.32/doc/scripts/: Makefile  Makefile.in
host_stack/apps/lighttpd-1.4.32/doc/systemd/: Makefile  Makefile.in
host_stack/apps/lighttpd-1.4.32/src/: Makefile  Makefile.in  chunk.c  fdevent.h  mod_webdav.c  mtcp.conf  network_backends.h  response.h  server.c  settings.h
host_stack/apps/lighttpd-1.4.32/src/.deps/: buffer.Po  chunk.Po  configfile-glue.Po  connections.Po  data_array.Po  data_integer.Po  data_string.Po  etag.Po  fdevent_freebsd_kqueue.Po  fdevent_libev.Po  fdevent_linux_sysepoll.Po  fdevent_poll.Po  fdevent_select.Po  fdevent_solaris_devpoll.Po  http-header-glue.Po  http_chunk.Po  inet_ntop_cache.Po  lighttpd-angel.Po  mod_access.Plo  mod_alias.Plo  mod_cml_la-mod_cml_funcs.Plo  mod_compress.Plo  mod_evasive.Plo  mod_extforward.Plo  mod_fastcgi.Plo  mod_mysql_vhost_la-mod_mysql_vhost.Plo  mod_proxy.Plo  mod_rewrite.Plo  mod_rrdtool.Plo  mod_scgi.Plo  mod_secure_download.Plo  mod_simple_vhost.Plo  mod_ssi_exprparser.Plo  mod_status.Plo  mod_trigger_b4_dl.Plo  network.Po  network_freebsd_sendfile.Po  network_solaris_sendfilev.Po  network_write.Po  network_writev.Po  (+6 more)
host_stack/apps/lighttpd-1.4.32/src/config/: arp.conf
host_stack/apps/lighttpd-1.4.32/tests/docroot/123/: Makefile
host_stack/apps/lighttpd-1.4.32/tests/docroot/www/: Makefile
host_stack/apps/perf/: Makefile
host_stack/autom4te.cache/: output.1  requests  traces.0  traces.1
host_stack/io_engine/lib/: Makefile
host_stack/mtcp/src/: Makefile  Makefile.in  api.c  config.c  core.c  dpdk_module.c  eventpoll.c  io_module.c  ip_out.c  tcp_in.c  tcp_stream.c  timer.c
host_stack/mtcp/src/include/: ip_out.h  mtcp.h  mtcp_api.h  mtcp_epoll.h  tcp_out.h  tcp_send_buffer.h  tcp_stream.h  tcp_util.h
mtcp_accelstorage/: Makefile.in
mtcp_accelstorage/apps/example/: epserver.conf
mtcp_accelstorage/apps/lighttpd-1.4.32/: Makefile  Makefile.in  automake-ohpc-1.15-1.7.x86_64.rpm  config.h  config.status  m-lighttpd.conf
mtcp_accelstorage/apps/lighttpd-1.4.32/autom4te.cache/: output.1  requests  traces.0
mtcp_accelstorage/apps/lighttpd-1.4.32/doc/config/: Makefile  m-lighttpd.conf
mtcp_accelstorage/apps/lighttpd-1.4.32/doc/initscripts/: Makefile
mtcp_accelstorage/apps/lighttpd-1.4.32/doc/scripts/: Makefile
mtcp_accelstorage/apps/lighttpd-1.4.32/doc/systemd/: Makefile
mtcp_accelstorage/apps/lighttpd-1.4.32/src/: base.h  chunk.h  connections.c  fdevent_libmtcp.c  http_chunk.c  http_chunk.h  mod_staticfile.c  mtcp.conf  network.c  network_backends.h  network_mtcp_writev.c  response.c  server.c  settings.h  stat_cache.c
mtcp_accelstorage/apps/lighttpd-1.4.32/src/.deps/: array.Po  bitset.Po  configfile.Po  configparser.Po  connections-glue.Po  crc32.Po  data_config.Po  data_count.Po  data_fastcgi.Po  fdevent.Po  fdevent_libmtcp.Po  fdevent_solaris_port.Po  http_auth.Plo  joblist.Po  keyvalue.Po  lemon.Po  log.Po  md5.Po  mod_accesslog.Plo  mod_auth.Plo  mod_cgi.Plo  mod_cml_la-mod_cml.Plo  mod_cml_la-mod_cml_lua.Plo  mod_dirlisting.Plo  mod_evhost.Plo  mod_expire.Plo  mod_flv_streaming.Plo  mod_indexfile.Plo  mod_magnet_la-mod_magnet.Plo  (+17 more)
mtcp_accelstorage/apps/lighttpd-1.4.32/tests/: Makefile
mtcp_accelstorage/mtcp/src/: Makefile  api.c  core.c  eventpoll.c  fhash.c  ip_in.c  tcp_in.c  tcp_out.c  tcp_send_buffer.c  tcp_stream.c  tcp_util.c
mtcp_accelstorage/mtcp/src/include/: fhash.h  mtcp.h  mtcp_api.h  stat.h  tcp_in.h  tcp_stream.h
nic_stack/: .clang-format  2q  5-1_install_dependency_for_smartnic.sh  Makefile  Makefile.opt  diskslave.c  diskslave.h  dpdk_io.c  fhash.c  forward-mext.c  forward.c  forward.c.backup  memalloc.c  memalloc.h  meson.build  option.h  test.c
offload_write_extbuf/: '  _forward.c  _forward_noread.c  _forward_rawread.c  diff.txt  fhash.c  fhash.h  forward-new.c  forward.c  forward_ex.c  main.c  memorypool.c  memorypool.h  offload_write.h  option.h
(+4 files in other folders)
